@@ -1,0 +1,3 @@
+[D-BUS Service]
+Name=org.gnome.Muine
+Exec=@prefix@/bin/muine
