@@ -1,6 +1,14 @@
 2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
 
 	* configure.in:
+	* data/Makefile.am:
+	* data/org.gnome.Muine.service.in:
+
+	Install D-Bus service file.
+
+2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
+
+	* configure.in:
 	* src/Makefile.am:
 	* src/muine.exe.config.in:
 	* src/muine.in:
